--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <img src="images/icon-delete.svg" alt="" />
           </button>
         </div>
-        <button class="cart-box_checkout">Checkout</button>
+        <button aria-label="click to check out" class="cart-box_checkout">
+          Checkout
+        </button>
       </div>
     </div>
   </header>
@@ -92,7 +94,7 @@
         </button>
       </div>
       <div class="slider_thumbnails">
-        <button class="slider_button">
+        <button aria-label="click to view thumbnail 1" class="slider_button">
           <img
             class="slider_thumbnail active"
             data-index="1"
@@ -100,7 +102,7 @@
             alt=""
           />
         </button>
-        <button class="slider_button">
+        <button aria-label="click to view thumbnail 2" class="slider_button">
           <img
             class="slider_thumbnail"
             data-index="2"
@@ -108,7 +110,7 @@
             alt=""
           />
         </button>
-        <button class="slider_button">
+        <button aria-label="click to view thumbnail 3" class="slider_button">
           <img
             class="slider_thumbnail"
             data-index="3"
@@ -116,7 +118,7 @@
             alt=""
           />
         </button>
-        <button class="slider_button">
+        <button aria-label="click to view thumbnail 4" class="slider_button">
           <img
             class="slider_thumbnail"
             data-index="4"
@@ -147,11 +149,17 @@
       </div>
       <div class="product_buttons">
         <div class="product_quantities">
-          <button class="product_reduce">
+          <button
+            aria-label="click to reduce product quantity"
+            class="product_reduce"
+          >
             <img src="images/icon-minus.svg" alt="" />
           </button>
           <span class="product_quantitiy">0</span>
-          <button class="product_increase">
+          <button
+            aria-label="click to increase product quantity"
+            class="product_increase"
+          >
             <img src="images/icon-plus.svg" alt="" />
           </button>
         </div>
